# cpp_tools

./: .gitignore  .gitmodules  LICENSE  README.md  generate_name_to_path_map.py  name_to_path_map.yaml
.github/workflows/: build-tools.yml
adb/: CMakeLists.txt  adb_logcat_pybind.cpp  adb_logcat_reader_pybind.cpp  example.py
adb/src/: AdbLogcatReader.h
cmake/: CMakeLists_standalone.txt  CMakeLists_template.txt  FindPythonCrossplatform.cmake  OptimizationFlags.cmake  README.md  cmake_manager.py
cv/apriltag_detection/: CMakeLists.txt  apriltag_detection_pybind.cpp  example.py
cv/apriltag_detection/src/ethz_apriltag2/: CMakeLists.txt
cv/apriltag_detection/src/examples/: detect_apriltag_board_corners.cpp
cv/camera_models/: CMakeLists.txt  camera_models_pybind.cpp  example.py
cv/camera_models/include/: Camera.h  CameraFactory.h  CataCamera.h  EquidistantCamera.h  PinholeCamera.h  PinholeFullCamera.h  ScaramuzzaCamera.h  Utils.h  quaternion_rotation.h
cv/camera_models/src/: Camera.cpp  CameraFactory.cpp  CataCamera.cpp  EquidistantCamera.cpp  PinholeCamera.cpp  PinholeFullCamera.cpp  ScaramuzzaCamera.cpp  Utils.cpp
cv/corner_detection/: CMakeLists.txt  corner_detection_pybind.cpp  example.py
cv/corner_detection/src/ethz_apriltag2/: CMakeLists.txt
cw_tools/: CMakeLists.txt
cw_tools/src/: cw_all.h  cw_basic.h  cw_datastructure.h  cw_logic.h  cw_plot.h  cw_saver.h  cw_string.h  cw_yaml_parser.h
dsp/butterworth_filter/: CMakeLists.txt  butterworth_filter_pybind.cpp  example.py
dsp/butterworth_filter/src/: butterworth_filter.cpp  butterworth_filter.h
dsp/sliding_window/: CMakeLists.txt  dsp_sw_pybind.cpp  example.py  sliding_window_dsp_pybind.cpp
dsp/sliding_window/src/: MKAverage.cpp  MKAverage.h  MonoQueue.cpp  MonoQueue.h  WelfordStd.cpp  WelfordStd.h
install_scripts/: SCRIPT_GUIDELINES.md  install_boost.sh  install_ceres.sh  install_cmake.sh  install_eigen.sh  install_gflags.sh  install_glog.sh  install_opencv.sh  install_pangolin.sh  install_pybind11.sh  install_sophus.sh  install_suitesparse.sh
visualization/pangolin/: CMakeLists.txt  PangolinViewer.cpp  PangolinViewer.h  example.py  pangolin_viewer_pybind.cpp  readme.md
visualization/pangolin/src/: PangolinViewer.cpp  PangolinViewer.h
visualization/pangolin_viewer/: CMakeLists.txt  example.py
visualization/pangolin_viewer/src/: PangolinViewer.cpp  PangolinViewer.h
